source many polyfillable things from babel

--- a/lighthouse-cli/test/fixtures/polyfills.html
+++ b/lighthouse-cli/test/fixtures/polyfills.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     wanna cracker?
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.2.5/polyfill.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.2.5/polyfill.min.js"></script>
     <script src="/polyfills.js"></script>
     <script>
         // TODO(cjamcl): analyze inline JS.
