--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -75,7 +75,7 @@ limitations under the License.
           <span class="lh-audit__index"></span>
           <span class="lh-audit__title"></span>
           <span class="lh-audit__display-text"></span>
-          <div class="lh-audit__score-icon"></div>
+          <div class="lh-audit__score-icons"></div>
           <div class="lh-chevron-container"></div>
         </div>
       </summary>
