one metrics table

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -89,7 +89,7 @@ limitations under the License.
   <div class="lh-metric">
     <div class="lh-metric__innerwrap tooltip-boundary">
       <span class="lh-metric__title"></span>
-      <div class="lh-metric__value"></div>
+      <div class="lh-metric__values"></div>
       <div class="lh-metric__description tooltip"></div>
     </div>
   </div>
