--- a/lighthouse-cli/test/fixtures/screenshots/index.html
+++ b/lighthouse-cli/test/fixtures/screenshots/index.html
@@ -9,10 +9,17 @@
 </head>
 <body>
     <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-    <!-- script.js is just an empty file. -->
+    <script src="script.js?delay=2500"></script>
+    <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+    <script src="script.js?delay=5000"></script>
+    <div id="main">
+        Hello
+    </div>
+    <script src="script.js?delay=6250"></script>
+    <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
     <script src="script.js?delay=7500"></script>
     <div id="main">
-        Hello world
+        World
     </div>
 </body>
 </html>
