--- a/lighthouse-cli/test/fixtures/oopif.html
+++ b/lighthouse-cli/test/fixtures/oopif.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Hello frames</h1>
-    <iframe name="oopif" src="https://airhorner.com"></iframe>
+    <iframe name="oopif" src="https://paulirish.com/page/2"></iframe>
   </body>
 </html>
