--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -47,7 +47,6 @@ limitations under the License.
 <template id="tmpl-lh-category-header">
   <div class="lh-category-header">
     <div class="lh-score__gauge"></div>
-    <span class="lh-category-header__title"></span>
     <div class="lh-category-header__description"></div>
   </div>
 </template>
@@ -531,8 +530,9 @@ limitations under the License.
   <style>
     .lh-footer {
       background-color: var(--header-bg-color);
-      border-top: 1px solid var(--report-secondary-border-color);
       padding: var(--section-indent) calc(var(--default-padding) * 2);
+      max-width: var(--report-width);
+      margin: 0 auto;
     }
     .lh-footer .lh-generated {
       text-align: center;
@@ -579,45 +579,43 @@ limitations under the License.
 <!-- Lighthouse score gauge -->
 <template id="tmpl-lh-gauge">
   <style>
-    .lh-gauge__wrapper {
-      --circle-size-half: calc(var(--circle-size) / 2);
-      --circle-background: hsl(216, 12%, 92%);
-      --circle-border-width: 9;
-      --inset-size: calc(var(--circle-size) - 2 * var(--circle-border-width));
-      --transition-length: 1s;
+    .lh-gauge__wrapper--pass {
+      color: var(--color-green);
+      fill: var(--color-green);
+      stroke: var(--color-green);
     }
 
-    .lh-gauge__wrapper--pass,
-    .lh-gauge__wrapper--pass .lh-gauge {
-      --circle-color: var(--pass-color);
-      color: var(--circle-color);
+    .lh-gauge__wrapper--average {
+      color: var(--color-orange);
+      fill: var(--color-orange);
+      stroke: var(--color-orange);
     }
 
-    .lh-gauge__wrapper--average,
-    .lh-gauge__wrapper--average .lh-gauge {
-      --circle-color: var(--average-color);
-      color: var(--circle-color);
-    }
-
-    .lh-gauge__wrapper--fail,
-    .lh-gauge__wrapper--fail .lh-gauge {
-      --circle-color: var(--fail-color);
-      color: var(--circle-color);
+    .lh-gauge__wrapper--fail {
+      color: var(--color-red);
+      fill: var(--color-red);
+      stroke: var(--color-red);
     }
 
     .lh-gauge {
-        max-width: 360px;
-        max-height: 360px;
-        stroke-linecap: round;
-        width: var(--circle-size);
-        height: var(--circle-size);
+      stroke-linecap: round;
+      width: var(--score-size);
+      height: var(--score-size);
+      font-size: var(--score-number-fontsize);
+      font-family: 'Roboto Mono', monospace;
+    }
+
+    .lh-category .lh-gauge {
+      width: var(--score-size-big);
+      height: var(--score-size-big);
     }
 
     .lh-gauge-base {
-        fill: none;
+        opacity: 0.1;
         stroke: var(--circle-background);
         stroke-width: var(--circle-border-width);
     }
+
     .lh-gauge-arc {
         fill: none;
         stroke: var(--circle-color);
@@ -631,25 +629,30 @@ limitations under the License.
     }
 
     .lh-gauge__percentage {
-      --spacer: calc((var(--circle-size) - var(--inset-size)) / 2);
       width: 100%;
       height: var(--inset-size);
       position: absolute;
       border-radius: inherit;
-      font-size: var(--header-font-size);
-      line-height: var(--header-font-size);
+      font-size: var(--score-number-fontsize);
+      line-height: var(--score-number-fontsize);
       text-align: center;
-      top: calc(var(--circle-size) / 3);
+      top: calc(var(--score-size) / 3);
+    }
+
+    .lh-category .lh-gauge__percentage {
+      font-size: var(--score-number-fontsize-big);
+      line-height: var(--score-number-fontsize-big);
+      top: calc(var(--score-size-big) / 3);
     }
 
     .lh-gauge__wrapper {
-      display: inline-flex;
+      display: flex;
       align-items: center;
       flex-direction: column;
       text-decoration: none;
-      flex: 1;
-      min-width: auto;
-      position: relative;
+      
+      --circle-border-width: 9;
+      --transition-length: 1s;
 
       /* Contain the layout style paint & layers during animation*/
       contain: content;
@@ -657,18 +660,18 @@ limitations under the License.
     }
 
     .lh-gauge__label {
-      font-size: var(--body-font-size);
-      line-height: var(--body-line-height);
-      margin-top: calc(0.5 * var(--body-line-height));
+      font-size: var(--score-title-fontsize);
+      line-height: var(--score-title-lineheight);
+      margin-top: calc(0.5 * var(--score-title-lineheight));
       text-align: center;
       color: black;
     }
 
   </style>
   <a href="#" class="lh-gauge__wrapper">
-    <svg viewBox="0 0 120 120" class="lh-gauge" fill="none" stroke-width="2">
-      <circle class="lh-gauge-base" r="53" cx="60" cy="60"></circle>
-      <circle class="lh-gauge-arc" transform="rotate(-90 60 60)" stroke-dasharray="0 329" stroke-dashoffset="0" r="53" cx="60" cy="60"></circle>
+    <svg viewBox="0 0 120 120" class="lh-gauge">
+      <circle class="lh-gauge-base" r="60" cx="60" cy="60"></circle>
+      <circle class="lh-gauge-arc" transform="rotate(-90 60 60)" stroke-dasharray="0 329" stroke-dashoffset="0" r="56" cx="60" cy="60"></circle>
     </svg>
     <div class="lh-gauge__percentage"></div>
     <div class="lh-gauge__label"></div>
@@ -679,19 +682,6 @@ limitations under the License.
 <!-- Lighthouse PWA badge gauge -->
 <template id="tmpl-lh-gauge--pwa">
   <style>
-    .lh-gauge--pwa__wrapper {
-      display: inline-flex;
-      align-items: center;
-      flex-direction: column;
-      text-decoration: none;
-      flex: 1;
-      min-width: auto;
-      position: relative;
-    }
-    .lh-gauge--pwa {
-      width: var(--circle-size);
-      height: var(--circle-size);
-    }
     .lh-gauge--pwa .lh-gauge--pwa__component {
       display: none;
     }
@@ -728,18 +718,10 @@ limitations under the License.
     .lh-gauge--pwa__wrapper.lh-badged--all .lh-gauge--pwa__check-circle {
       display: inline;
     }
-
-    .lh-gauge__label {
-      font-size: var(--body-font-size);
-      line-height: var(--body-line-height);
-      margin-top: calc(0.5 * var(--body-line-height));
-      text-align: center;
-      color: black;
-    }
   </style>
 
-  <a href="#" class="lh-gauge--pwa__wrapper">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" class="lh-gauge--pwa">
+  <a href="#" class="lh-gauge__wrapper lh-gauge--pwa__wrapper">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" class="lh-gauge lh-gauge--pwa">
       <defs>
         <linearGradient id="lh-gauge--pwa__bg-disk__gradient" x1="50%" y1="2.15%" x2="50%" y2="97.645%">
           <stop stop-color="#F1F3F4" offset="0%"></stop>
