fix paddinng in header

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -134,7 +134,8 @@ limitations under the License.
   <style>
     .lh-scores-container {
       display: grid;
-      padding-bottom: calc(var(--section-indent) / 2);
+      margin-top: var(--topbar-height);
+      padding: var(--header-padding);
       position: relative;
       width: 100%;
     }
