section header margin

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -634,7 +634,7 @@ limitations under the License.
     .lh-gauge__label {
       font-size: var(--score-title-font-size);
       line-height: var(--score-title-line-height);
-      margin-top: calc(0.5 * var(--score-title-line-height));
+      margin: calc(0.5 * var(--score-title-line-height));
       text-align: center;
       color: black;
     }
@@ -642,7 +642,7 @@ limitations under the License.
     .lh-category .lh-gauge__label {
       font-size: var(--score-title-font-size-big);
       line-height: var(--score-title-line-height-big);
-      margin-top: calc(0.5 * var(--score-title-line-height-big));
+      margin: calc(0.5 * var(--score-title-line-height-big));
     }
 
   </style>
