fix gauge size and arc

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -648,8 +648,8 @@ limitations under the License.
   </style>
   <a href="#" class="lh-gauge__wrapper">
     <svg viewBox="0 0 120 120" class="lh-gauge">
-      <circle class="lh-gauge-base" r="53" cx="60" cy="60"></circle>
-      <circle class="lh-gauge-arc" transform="rotate(-90 60 60)" stroke-dasharray="0 329" stroke-dashoffset="0" r="53" cx="60" cy="60"></circle>
+      <circle class="lh-gauge-base" r="56" cx="60" cy="60"></circle>
+      <circle class="lh-gauge-arc" transform="rotate(-90 60 60)" r="56" cx="60" cy="60"></circle>
     </svg>
     <div class="lh-gauge__percentage"></div>
     <div class="lh-gauge__label"></div>
