--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -56,8 +56,10 @@ limitations under the License.
   <details class="lh-clump lh-audit-group">
     <summary>
       <div class="lh-audit-group__summary">
-        <div class="lh-audit-group__header"></div>
-        <div class="lh-audit-group__itemcount"></div>
+        <div class="lh-audit-group__caption">
+          <span class="lh-audit-group__header"></span>
+          <span class="lh-audit-group__itemcount"></span>
+        </div>
         <div class=""></div>
       </div>
     </summary>
@@ -70,10 +72,9 @@ limitations under the License.
     <details class="lh-expandable-details">
       <summary>
         <div class="lh-audit__header lh-expandable-details__summary">
-          <span class="lh-audit__index"></span>
+          <span class="lh-audit__score-icon"></span>
           <span class="lh-audit__title"></span>
           <span class="lh-audit__display-text"></span>
-          <div class="lh-audit__score-icon"></div>
           <div class="lh-chevron-container"></div>
         </div>
       </summary>
