add score icon for opps

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -103,7 +103,7 @@ limitations under the License.
           <div class="lh-audit__header lh-expandable-details__summary">
             <div class="lh-load-opportunity__cols">
               <div class="lh-load-opportunity__col lh-load-opportunity__col--one">
-                <span class="lh-audit__index"></span>
+                <span class="lh-audit__score-icon"></span>
                 <div class="lh-audit__title"></div>
               </div>
               <div class="lh-load-opportunity__col lh-load-opportunity__col--two">
