remove some unused vars

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -936,7 +936,7 @@ limitations under the License.
         .lh-snippet__line--message code {
           padding: 10px;
           padding-left: 5px;
-          color: var(--fail-color);
+          color: var(--color-red);
           font-family: var(--text-font-family);
         }
         .lh-snippet__line--message code {
@@ -954,8 +954,8 @@ limitations under the License.
           display: inline-block;
           vertical-align: middle;
           margin-right: 4px;
-          width: var(--lh-score-icon-width);
-          height: var(--lh-score-icon-width);
+          width: var(--shape-size);
+          height: var(--shape-size);
           background-image: var(--fail-icon-url);
         }
         .lh-snippet__line-number {
