badge on category icon too

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -598,6 +598,31 @@ limitations under the License.
         animation-delay: 250ms;
     }
 
+    .lh-gauge__svg-wrapper {
+      position: relative;
+    }
+    .lh-gauge__wrapper--plugin .lh-gauge__svg-wrapper:before {
+      width: var(--plugin-badge-size);
+      height: var(--plugin-badge-size);
+      background-color: var(--plugin-badge-bg);
+      background-image: var(--plugin-icon-url);
+      background-repeat: no-repeat;
+      background-size: var(--plugin-icon-size);
+      background-position: 58% 50%;
+      content: "";
+      position: absolute;
+      right: -6px;
+      bottom: -2px;
+      display: block;
+      z-index: 100;
+      box-shadow: 0 0 4px rgba(0,0,0,.2);
+      border-radius: 25%;
+    }
+    .lh-category .lh-gauge__wrapper--plugin .lh-gauge__svg-wrapper:before {
+      width: var(--plugin-badge-size-big);
+      height: var(--plugin-badge-size-big);
+    }
+
     @keyframes load-gauge {
       from { stroke-dasharray: 0 352; }
     }
