show description for clump audit groups. refactor header components

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -56,9 +56,10 @@ limitations under the License.
   <details class="lh-clump lh-audit-group">
     <summary>
       <div class="lh-audit-group__summary">
-        <div class="lh-audit-group__caption">
-          <span class="lh-audit-group__header"></span>
+        <div class="lh-audit-group__header">
+          <span class="lh-audit-group__title"></span>
           <span class="lh-audit-group__itemcount"></span>
+          <!-- .lh-audit-group__description will be added here -->
         </div>
         <div class=""></div>
       </div>
