--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -612,6 +612,7 @@ limitations under the License.
         animation-delay: 250ms;
     }
 
+    /* The plugin badge overlay */
     .lh-gauge__svg-wrapper {
       position: relative;
     }
