--color-(average, pass, fail)

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -457,21 +457,21 @@ limitations under the License.
 <template id="tmpl-lh-gauge">
   <style>
     .lh-gauge__wrapper--pass {
-      color: var(--color-green);
-      fill: var(--color-green);
-      stroke: var(--color-green);
+      color: var(--color-pass);
+      fill: var(--color-pass);
+      stroke: var(--color-pass);
     }
 
     .lh-gauge__wrapper--average {
-      color: var(--color-orange);
-      fill: var(--color-orange);
-      stroke: var(--color-orange);
+      color: var(--color-average);
+      fill: var(--color-average);
+      stroke: var(--color-average);
     }
 
     .lh-gauge__wrapper--fail {
-      color: var(--color-red);
-      fill: var(--color-red);
-      stroke: var(--color-red);
+      color: var(--color-fail);
+      fill: var(--color-fail);
+      stroke: var(--color-fail);
     }
 
     .lh-gauge {
@@ -844,7 +844,7 @@ limitations under the License.
         .lh-snippet__line--message code {
           padding: 10px;
           padding-left: 5px;
-          color: var(--color-red);
+          color: var(--color-fail);
           font-family: var(--text-font-family);
         }
         .lh-snippet__line--message code {
