--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -862,8 +862,8 @@ limitations under the License.
           display: inline-block;
           vertical-align: middle;
           margin-right: 4px;
-          width: var(--shape-size);
-          height: var(--shape-size);
+          width: var(--icon-shape-size);
+          height: var(--icon-shape-size);
           background-image: var(--fail-icon-url);
         }
         .lh-snippet__line-number {
