gauge circle size

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -476,13 +476,13 @@ limitations under the License.
 
     .lh-gauge {
       stroke-linecap: round;
-      width: var(--circle-size);
-      height: var(--circle-size);
+      width: var(--gauge-circle-size);
+      height: var(--gauge-circle-size);
     }
 
     .lh-category .lh-gauge {
-      width: var(--circle-size-big);
-      height: var(--circle-size-big);
+      width: var(--gauge-circle-size-big);
+      height: var(--gauge-circle-size-big);
     }
 
     .lh-gauge-base {
@@ -512,19 +512,19 @@ limitations under the License.
       font-size: var(--score-number-font-size);
       line-height: var(--score-number-font-size);
       text-align: center;
-      top: calc(var(--circle-size) / 3);
+      top: calc(var(--gauge-circle-size) / 3);
     }
 
     .lh-category .lh-gauge__percentage {
       font-size: var(--score-number-fontsize-big);
       line-height: var(--score-number-fontsize-big);
-      top: calc(var(--circle-size-big) / 3);
+      top: calc(var(--gauge-circle-size-big) / 3);
     }
 
     .lh-category .lh-gauge__percentage {
       font-size: var(--score-number-font-size-big);
       line-height: var(--score-number-font-size-big);
-      top: calc(var(--circle-size-big) / 3);
+      top: calc(var(--gauge-circle-size-big) / 3);
     }
 
     .lh-gauge__wrapper {
