--- a/lighthouse-cli/test/fixtures/seo/seo-tester.html
+++ b/lighthouse-cli/test/fixtures/seo/seo-tester.html
@@ -19,7 +19,7 @@
   <link rel="alternate" href="http://example.com/" hreflang="x-default" />
   <!-- PASS(canonical): valid canonical URL -->
   <link rel="canonical" href="http://localhost:10200/seo/" />
-  <!-- PASS(structured-data-automatic): valid JSON-LD -->
+  <!-- PASS(json-ld): valid JSON-LD -->
   <script type="application/ld+json">
     {
       "@context": "http://schema.org",
