--- a/lighthouse-cli/test/fixtures/seo/seo-failure-cases.html
+++ b/lighthouse-cli/test/fixtures/seo/seo-failure-cases.html
@@ -20,7 +20,7 @@
   <link rel="alternate" href="http://example.com/" hreflang=" x-default" />
   <!-- FAIL(canonical): multiple canonical URLs provided (another one is in the HTTP header) -->
   <link rel="canonical" href="https://example.com/other" />
-  <!-- FAIL(structured-data-automatic): invalid @type -->
+  <!-- FAIL(json-ld): invalid @type -->
   <script type="application/ld+json">
     {
       "@context": "http://schema.org",
