--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -229,6 +229,9 @@ limitations under the License.
       cursor: pointer;
       margin-right: 5px;
     }
+    .lh-export__button svg {
+      fill: var(--lh-export-icon-color);
+    }
     .lh-export__button:focus,
     .lh-export__button.active {
       outline: none;
@@ -304,7 +307,7 @@ limitations under the License.
     
     <div class="lh-export">
       <div class="report-icon report-icon--share lh-export__button" title="Export report">
-        <svg width="100%" height="100%" viewBox="0 0 24 24" fill="#757575">
+        <svg width="100%" height="100%" viewBox="0 0 24 24">
             <path d="M0 0h24v24H0z" fill="none"/>
             <path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/>
         </svg>
