--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -367,6 +367,7 @@ limitations under the License.
     */
     .pyro {
       display: none;
+      z-index: 1;
     }
     .score100 .pyro {
       display: block;
