--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -368,6 +368,7 @@ limitations under the License.
     .pyro {
       display: none;
       z-index: 1;
+      pointer-events: none;
     }
     .score100 .pyro {
       display: block;
