transition events are stupid

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -203,6 +203,7 @@ limitations under the License.
       position: absolute;
       bottom: -1px;
       left: 0;
+      transition: left 100ms;
     }
   </style>
   <div class="lh-scores-wrapper">
@@ -334,7 +335,7 @@ limitations under the License.
     </svg>
 
     <a href="" class="lh-topbar__url" target="_blank" rel="noopener"></a>
-    
+
     <div class="lh-export">
       <button class="report-icon report-icon--share lh-export__button" title="Export report"></button>
       <div class="lh-export__dropdown">
