--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -1046,3 +1046,15 @@ limitations under the License.
     </div>
   </template>
 
+
+<!-- Lighthouse element screenshot -->
+<template id="tmpl-lh-element-screenshot">
+  <div class="lh-element-screenshot">
+    <div class="lh-element-screenshot__content">
+      <div class="lh-element-screenshot__mask"></div>
+      <div class="lh-element-screenshot__image"></div>
+      <div class="lh-element-screenshot__element-marker"></div>
+    </div>
+  </div>
+</template>
+
