--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -45,8 +45,13 @@ limitations under the License.
 <!-- Lighthouse category header -->
 <template id="tmpl-lh-category-header">
   <div class="lh-category-header">
-    <div class="lh-score__gauge"></div>
-    <div class="lh-category-header__description"></div>
+    <div class="lh-score__gauge">
+      <!-- Will be added to .lh-gauge__label via renderCategoryHeader -->
+      <!-- <span class="tooltip-boundary">
+        <div class="lh-gauge__label-info-icon"></div>
+        <div class="lh-category-header__description tooltip"></div>
+      </span> -->
+    </div>
   </div>
 </template>
 
@@ -648,9 +653,29 @@ limitations under the License.
     .lh-category .lh-gauge__label {
       --score-title-font-size: var(--score-title-font-size-big);
       --score-title-line-height: var(--score-title-line-height-big);
+      display: flex;
+      align-items: center;
       margin-top: 14px;
+      position: relative;
     }
 
+    .lh-gauge__label .tooltip-boundary {
+      display: flex;
+      position: absolute;
+      right: calc(-1 * var(--lh-info-icon-background-size));
+    }
+
+    .lh-gauge__label .lh-gauge__label-info-icon {
+      background-image: var(--informative-url);
+      background-size: contain;
+      width: var(--lh-info-icon-background-size);
+      height: var(--lh-info-icon-background-size);
+    }
+
+    .lh-gauge__label .tooltip {
+      font-size: var(--caption-font-size);
+      line-height: var(--caption-line-height);
+    }
   </style>
   <a href="#" class="lh-gauge__wrapper">
     <!-- Wrapper exists for the ::before plugin icon. Cannot create pseudo-elements on svgs. -->
