--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -46,7 +46,8 @@ limitations under the License.
 <template id="tmpl-lh-category-header">
   <div class="lh-category-header">
     <div class="lh-score__gauge">
-      <!-- tmpl-lh-category-header-description-tooltip be added to .lh-gauge__label via renderCategoryHeader -->
+      <!-- If there is a description, .lh-gauge__label will be wrapped with .lh-gauge__label-wrapper,
+      and tmpl-lh-category-header-description-tooltip appended to the wrapper. See renderCategoryHeader. -->
     </div>
   </div>
 </template>
@@ -659,23 +660,28 @@ limitations under the License.
       --score-title-line-height: var(--score-title-line-height-big);
       display: flex;
       margin-top: 14px;
-      position: relative;
     }
 
-    .lh-gauge__label .tooltip-boundary {
+    .lh-gauge__label-wrapper {
+      position: relative;
+      color: var(--body-text-color);
+    }
+
+    .lh-gauge__label-wrapper .tooltip-boundary {
       display: flex;
       position: absolute;
       right: calc(-1 * var(--lh-info-icon-background-size));
+      top: 14px;
     }
 
-    .lh-gauge__label .lh-gauge__label-info-icon {
+    .lh-gauge__label-wrapper .lh-gauge__label-info-icon {
       background-image: var(--informative-url);
       background-size: contain;
       width: var(--lh-info-icon-background-size);
       height: var(--lh-info-icon-background-size);
     }
 
-    .lh-gauge__label .tooltip {
+    .lh-gauge__label-wrapper .tooltip {
       font-size: var(--caption-font-size);
       line-height: var(--caption-line-height);
     }
