remove most of top of page shiiiit

--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -219,8 +219,8 @@ limitations under the License.
 <template id="tmpl-lh-topbar">
   <style>
     .lh-topbar {
-      position: fixed;
-      top: var(--top-of-page-offset);
+      position: sticky;
+      top: 0;
       left: 0;
       right: 0;
       z-index: 1000;
