--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -171,10 +171,10 @@ limitations under the License.
       --plugin-icon-size: 75%;
       --score-container-width: 60px;
       --score-number-font-size: 13px;
-      position: fixed;
+      position: sticky;
       left: 0;
       right: 0;
-      top: calc(var(--topbar-height) + var(--top-of-page-offset));
+      top: var(--topbar-height);
       font-weight: 700;
       display: flex;
       justify-content: center;
