--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -176,7 +176,7 @@ limitations under the License.
       right: 0;
       top: var(--topbar-height);
       font-weight: 700;
-      display: flex;
+      display: none;
       justify-content: center;
       background-color: var(--color-sticky-header-bg);
       border-bottom: 1px solid var(--color-black-200);
@@ -184,12 +184,11 @@ limitations under the License.
       padding-bottom: 4px;
       z-index: 1;
       pointer-events: none;
-      opacity: 0;
     }
 
     .lh-sticky-header--visible {
+      display: flex;
       pointer-events: auto;
-      opacity: 1;
     }
 
     .lh-sticky-header .lh-gauge__label {
