--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -205,8 +205,11 @@ limitations under the License.
       height: 1px;
       background: var(--color-highlighter-bg);
       position: absolute;
-      bottom: -1px;
-      left: 0;
+      bottom: -5px;
+    }
+
+    .lh-gauge__wrapper:first-of-type {
+      contain: none;
     }
   </style>
   <div class="lh-scores-wrapper">
