--- a/lighthouse-cli/test/fixtures/source-maps/source-maps-tester.html
+++ b/lighthouse-cli/test/fixtures/source-maps/source-maps-tester.html
@@ -33,6 +33,10 @@
     // }
     //# sourceMappingURL=data:application/json;charset=utf-8;base64,ew0KICAidmVyc2lvbiIgOiAzLA0KICAiZmlsZSI6ICJvdXQuanMiLA0KICAic291cmNlUm9vdCIgOiAiIiwNCiAgInNvdXJjZXMiOiBbImZvby5qcyIsICJiYXIuanMiXSwNCiAgIm5hbWVzIjogWyJzcmMiLCAibWFwcyIsICJhcmUiLCAiZnVuIl0sDQogICJtYXBwaW5ncyI6ICJBQWdCQyxTQUFRLENBQUVBIg0KfQ==
   </script>
+
+  <script src="bundle.js"></script>
+
+  <script src="bundle-map-500.js"></script>
   
   map time map time! map time map time! 🎉
 </body>
