--- a/viewer/index.html
+++ b/viewer/index.html
@@ -112,8 +112,10 @@ limitations under the License.
       <summary>
         <div class="lh-audit__header lh-expandable-details__summary">
           <span class="lh-audit__score-icon"></span>
-          <span class="lh-audit__title"></span>
-          <span class="lh-audit__display-text"></span>
+          <span class="lh-audit__title-and-text">
+            <span class="lh-audit__title"></span>
+            <span class="lh-audit__display-text"></span>
+          </span>
           <div class="lh-chevron-container"></div>
         </div>
       </summary>
@@ -175,7 +177,6 @@ limitations under the License.
     .lh-scores-container {
       display: flex;
       flex-direction: column;
-      margin-top: var(--topbar-height);
       padding: var(--header-padding);
       position: relative;
       width: 100%;
@@ -187,12 +188,12 @@ limitations under the License.
       --plugin-icon-size: 75%;
       --score-container-width: 60px;
       --score-number-font-size: 13px;
-      position: fixed;
+      position: sticky;
       left: 0;
       right: 0;
       top: var(--topbar-height);
       font-weight: 700;
-      display: flex;
+      display: none;
       justify-content: center;
       background-color: var(--color-sticky-header-bg);
       border-bottom: 1px solid var(--color-black-200);
@@ -200,12 +201,17 @@ limitations under the License.
       padding-bottom: 4px;
       z-index: 1;
       pointer-events: none;
-      opacity: 0;
     }
 
     .lh-sticky-header--visible {
+      display: flex;
       pointer-events: auto;
-      opacity: 1;
+    }
+
+    /* Disable the gauge arc animation for the sticky header, so toggling display: none
+       does not play the animation. */
+    .lh-sticky-header .lh-gauge-arc {
+      animation: none;
     }
 
     .lh-sticky-header .lh-gauge__label {
@@ -217,8 +223,11 @@ limitations under the License.
       height: 1px;
       background: var(--color-highlighter-bg);
       position: absolute;
-      bottom: -1px;
-      left: 0;
+      bottom: -5px;
+    }
+
+    .lh-gauge__wrapper:first-of-type {
+      contain: none;
     }
   </style>
   <div class="lh-scores-wrapper">
@@ -235,7 +244,7 @@ limitations under the License.
 <template id="tmpl-lh-topbar">
   <style>
     .lh-topbar {
-      position: fixed;
+      position: sticky;
       top: 0;
       left: 0;
       right: 0;
@@ -271,6 +280,15 @@ limitations under the License.
       height: var(--lh-export-icon-size);
       cursor: pointer;
       margin-right: 5px;
+    }
+    /*
+      Some features in the top right drop down menu don't work in the DevTools
+      client. They could with some tweaks, but currently they don't. For example:
+      Saving as HTML/JSON - does not bring up a file dialog, as one would expect in DevTools.
+                            also, it saves the AuditsPanel HTML, which is funky.
+    */
+    .lh-devtools .lh-export__button {
+      display: none;
     }
     .lh-export__button svg {
       fill: var(--lh-export-icon-color);
@@ -557,132 +575,6 @@ limitations under the License.
 
 <!-- Lighthouse score gauge -->
 <template id="tmpl-lh-gauge">
-  <style>
-    .lh-gauge__wrapper--pass {
-      color: var(--color-pass);
-      fill: var(--color-pass);
-      stroke: var(--color-pass);
-    }
-
-    .lh-gauge__wrapper--average {
-      color: var(--color-average);
-      fill: var(--color-average);
-      stroke: var(--color-average);
-    }
-
-    .lh-gauge__wrapper--fail {
-      color: var(--color-fail);
-      fill: var(--color-fail);
-      stroke: var(--color-fail);
-    }
-
-    .lh-gauge {
-      stroke-linecap: round;
-      width: var(--gauge-circle-size);
-      height: var(--gauge-circle-size);
-    }
-
-    .lh-category .lh-gauge {
-      --gauge-circle-size: var(--gauge-circle-size-big);
-    }
-
-    .lh-gauge-base {
-        opacity: 0.1;
-        stroke: var(--circle-background);
-        stroke-width: var(--circle-border-width);
-    }
-
-    .lh-gauge-arc {
-        fill: none;
-        stroke: var(--circle-color);
-        stroke-width: var(--circle-border-width);
-        animation: load-gauge var(--transition-length) ease forwards;
-        animation-delay: 250ms;
-    }
-
-    .lh-gauge__svg-wrapper {
-      position: relative;
-      height: var(--gauge-circle-size);
-    }
-    .lh-category .lh-gauge__svg-wrapper {
-      --gauge-circle-size: var(--gauge-circle-size-big);
-    }
-
-    /* The plugin badge overlay */
-    .lh-gauge__wrapper--plugin .lh-gauge__svg-wrapper::before {
-      width: var(--plugin-badge-size);
-      height: var(--plugin-badge-size);
-      background-color: var(--plugin-badge-bg);
-      background-image: var(--plugin-icon-url);
-      background-repeat: no-repeat;
-      background-size: var(--plugin-icon-size);
-      background-position: 58% 50%;
-      content: "";
-      position: absolute;
-      right: -6px;
-      bottom: 0px;
-      display: block;
-      z-index: 100;
-      box-shadow: 0 0 4px rgba(0,0,0,.2);
-      border-radius: 25%;
-    }
-    .lh-category .lh-gauge__wrapper--plugin .lh-gauge__svg-wrapper::before {
-      width: var(--plugin-badge-size-big);
-      height: var(--plugin-badge-size-big);
-    }
-
-    @keyframes load-gauge {
-      from { stroke-dasharray: 0 352; }
-    }
-
-    .lh-gauge__percentage {
-      width: 100%;
-      height: var(--inset-size);
-      position: absolute;
-      border-radius: inherit;
-      font-family: var(--monospace-font-family);
-      font-size: var(--score-number-font-size);
-      line-height: var(--score-number-font-size);
-      text-align: center;
-      top: calc(var(--score-container-padding) + var(--gauge-circle-size) / 3);
-    }
-
-    .lh-category .lh-gauge__percentage {
-      --gauge-circle-size: var(--gauge-circle-size-big);
-      --score-number-font-size: var(--score-number-font-size-big);
-    }
-
-    .lh-gauge__wrapper {
-      position: relative;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      text-decoration: none;
-
-      --circle-border-width: 8;
-      --transition-length: 1s;
-
-      /* Contain the layout style paint & layers during animation*/
-      contain: content;
-      will-change: opacity; /* Only using for layer promotion */
-    }
-
-    .lh-gauge__label {
-      font-size: var(--score-title-font-size);
-      line-height: var(--score-title-line-height);
-      margin-top: 10px;
-      text-align: center;
-      color: var(--body-text-color);
-    }
-
-    /* TODO(#8185) use more BEM (.lh-gauge__label--big) instead of relying on descendant selector */
-    .lh-category .lh-gauge__label {
-      --score-title-font-size: var(--score-title-font-size-big);
-      --score-title-line-height: var(--score-title-line-height-big);
-      margin-top: 14px;
-    }
-
-  </style>
   <a href="#" class="lh-gauge__wrapper">
     <!-- Wrapper exists for the ::before plugin icon. Cannot create pseudo-elements on svgs. -->
     <div class="lh-gauge__svg-wrapper">
